--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "server/server.js",
   "scripts": {
     "start:api": "cross-env NODE_ENV=development NILU_API_ROOT=https://api.nilu.no MONGODB_URL=mongodb://localhost:27017 MONGODB_DB=nilu-cache LOG_LEVEL_CONSOLE=debug PORT=8080 CIRCUIT_BREAKER_TIMEOUT=500 nodemon ./server/server.js --watch server",
-    "lint:js": "eslint ./server/**/*.js --max-warnings 10",
     "test:unit": "cross-env NODE_ENV=test TEST=unit PORT=8088 jest --config=./jest.config.js --no-cache --coverage --env=jsdom",
     "test": "npm-run-all test:unit",
     "serve": "cross-env node ./server/server.js"
@@ -36,8 +35,8 @@
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "eslint": "5.14.1",
     "jest": "24.1.0",
+    "babel-jest": "24.1.0",
     "nodemon": "1.18.10",
     "npm-run-all": "4.1.5"
   }
